# wasm-web-worker-example

./: Cargo.toml  README.md  index.html
site/: package-lock.json
site_vite/: package-lock.json  package.json  vite.config.ts
site_vite/src/: main.ts  worker.ts
site_webpack/: index.js  package.json  worker.js
src/: lib.rs
